# docs/swagger.json
@@ -351,6 +351,9 @@
                 "favorite_only": {
                     "type": "boolean"
                 },
+                "item_per_page": {
+                    "type": "integer"
+                },
                 "order": {
                     "$ref": "#/definitions/meta.SortOrder"
                 },
@@ -388,6 +391,9 @@
                 },
                 "tag_favorite": {
                     "type": "boolean"
+                },
+                "total_page": {
+                    "type": "integer"
                 }
             }
         },
